k8s/propromo.chat-k8s-cluster.yml
#apiVersion: v1
#kind: Secret
#metadata:
#  name: propromo-chat-secret
#type: Opaque
#stringData:
#  SECRET_ENV_VARIABLE: secretValue
#--- # the application container
apiVersion: apps/v1
kind: Deployment
metadata:
  name: propromo-chat
  namespace: student-j-froeller
spec:
  replicas: 1 # ReplicaSet: kubectl scale deployment propromo-chat --replicas=1
  selector:
    matchLabels:
      app: propromo-chat
  template:
    metadata:
      labels:
        app: propromo-chat
    spec:
      containers:
        - name: propromo-chat
          image: registry.cloud.htl-leonding.ac.at/j.froeller/chat-app:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
--- # exposes the application
apiVersion: v1
kind: Service
metadata:
  name: propromo-chat-service
  namespace: student-j-froeller
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: propromo-chat
--- # controller that looks for services and exposes the services to the internet
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: propromo-chat-ingress
  namespace: student-j-froeller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /j.froeller/propromo-chat(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: propromo-chat-service
                port:
                  number: 80
